# keiba-hacke

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: ichiba.yml  python-app.yml
app/: Dockerfile  pyproject.toml
app/.devcontainer/: devcontainer.json
app/src/: sample.py
app/src/hobo/components/netkeiba_preprocess/: netkeiba_preprocess.py  netkeiba_preprocess_component.py
app/src/hobo/components/netkeiba_scraper/: netkeiba_scraper.py  netkeiba_scraper_component.py
app/src/hobo/components/train_lgb/: train_lgb_component.py
app/src/hobo/pipelines/: kh_pipeline.py  kh_pipeline_job.json
app/src/ichiba/components/predict/: Dockerfile
app/src/ichiba/components/predict/App_ponyo/: columns.pickle  columns_j.pickle  my_fastapi.py  predict_race.py
app/src/ichiba/components/predict/App_ponyo/templates/: form.html  result.html
app/src/ichiba/components/train/: Dockerfile  sample_1.ipynb  sample_2.ipynb  sample_flow.py  sample_notebook_flow.py  sample_prefect.py
app/src/kh/components/netkeiba_preprocess/: Dockerfile  netkeiba_preprocess.py
app/src/kh/components/netkeiba_scraper/: Dockerfile  netkeiba_scraper.ipynb  netkeiba_scraper.py
app/src/kh/components/train_lgb/: train_lgb.py
app/src/kh/pipelines/: kh_pipeline.py
app/src/sample/components/sample/: Dockerfile  pyproject.toml  sample.py  sample_component.py
app/src/sample/pipelines/: sample_pipeline.py  sample_pipeline_job.json
app/tests/: test_component_sample.py  test_hoge.py  test_sample.py
terraform/: main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
