[tool.poetry]
name = "keiba-hacke"
version = "0.1.0"
description = ""
authors = ["nokoxxx1212"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
isort = "^5.12.0"
black = "^23.10.1"
pyproject-flake8 = "^6.1.0"
jupyterlab = "^4.0.8"
pandas = "2.1.2"
pytest = "^7.4.3"

[tool.pytest.ini_options]
testpaths = ["tests",]