[tool.poetry]
name = "keiba-hacke"
version = "0.1.0"
description = ""
authors = ["nokoxxx1212"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyterlab = "^4.0.8"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.10.1"
pyproject-flake8 = "^6.1.0"

[tool.poetry.group.sample]
optional = true
[tool.poetry.group.sample.dependencies]
pandas = "2.1.2"

[tool.pytest.ini_options]
testpaths = ["tests",]